Closed
Bug 416101
Opened 13 years ago
Closed 13 years ago
Mingw build error in ../mozilla/dom/src/json/nsJSON.cpp
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bengt.erik.soderstrom, Assigned: martijn.martijn)
References
Details
Attachments
(1 file)
977 bytes,
patch
|
sayrer
:
review+
mtschrep
:
approval1.9+
|
Details | Diff | Splinter Review |
I believe this is a regression from check-in for Bug 410890. I get this now: Building deps for /cygdrive/d/mozilla/mozilla/dom/src/json/nsJSON.cpp /cygdrive/d/mozilla/mozilla/build/cygwin-wrapper g++ -mno-cygwin -o nsJSON.o -c -D_IMPL_NS_LAYOUT -DMOZILLA_INTERNAL_API -DOSTYPE=\"WINNT5.1\" -DOSARCH=WINNT - I/cygdrive/d/mozilla/mozilla/dom/src/json/../base -I/cygdrive/d/mozilla/mozilla/ content/events/src -I/cygdrive/d/mozilla/mozilla/dom/src/json -I. -I../../../dis t/include/xpcom -I../../../dist/include/string -I../../../dist/include/content - I../../../dist/include/caps -I../../../dist/include/js -I../../../dist/include/l ocale -I../../../dist/include/layout -I../../../dist/include/necko -I../../../di st/include/pref -I../../../dist/include/uconv -I../../../dist/include/unicharuti l -I../../../dist/include/widget -I../../../dist/include/xpconnect -I../../../di st/include -I../../../dist/include/dom -I../../../dist/include/nspr -I../. ./../dist/sdk/include -fno-rtti -fno-exceptions -Wall -Wconversion -Wpoint er-arith -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dt or -Wcast-align -Wno-long-long -pedantic -fno-strict-aliasing -mms-bitfields -pi pe -DNDEBUG -DTRIMMED -O -DWINVER=0x501 -D_WIN32_WINNT=0x501 -D_WIN32_IE=0x05 00 -DX_DISPLAY_MISSING=1 -DMOZILLA_VERSION=\"1.9b4pre\" -DMOZILLA_VERSION_U=1.9b 4pre -DHAVE_SNPRINTF=1 -D_WINDOWS=1 -D_WIN32=1 -DWIN32=1 -DXP_WIN=1 -DXP_WIN32=1 -DHW_THREADS=1 -DSTDC_HEADERS=1 -DWIN32_LEAN_AND_MEAN=1 -DNO_X11=1 -D_X86_=1 -D D_INO=d_ino -DSTDC_HEADERS=1 -DHAVE_DIRENT_H=1 -DHAVE_GETOPT_H=1 -DHAVE_MEMORY_H =1 -DHAVE_UNISTD_H=1 -DHAVE_MALLOC_H=1 -DHAVE_LIBM=1 -DNO_X11=1 -DMMAP_MISSES_WR ITES=1 -DHAVE_STRERROR=1 -DHAVE_SNPRINTF=1 -DHAVE_MEMMOVE=1 -DHAVE_RINT=1 -DVA_C OPY=va_copy -DHAVE_VA_COPY=1 -DMOZ_EMBEDDING_LEVEL_DEFAULT=1 -DMOZ_EMBEDDING_LEV EL_BASIC=1 -DMOZ_EMBEDDING_LEVEL_MINIMAL=1 -DMOZ_PHOENIX=1 -DMOZ_BUILD_APP=brows er -DMOZ_XUL_APP=1 -DMOZ_DEFAULT_TOOLKIT=\"cairo-windows\" -DMOZ_THEBES=1 -DMOZ_ CAIRO_GFX=1 -DMOZ_DISTRIBUTION_ID=\"org.mozilla\" -DOJI=1 -DIBMBIDI=1 -DMOZ_VIEW _SOURCE=1 -DMOZ_XPINSTALL=1 -DMOZ_JSLOADER=1 -DNS_PRINTING=1 -DNS_PRINT_PREVIEW= 1 -DMOZ_NO_XPCOM_OBSOLETE=1 -DMOZ_XTF=1 -DMOZ_MATHML=1 -DMOZ_ENABLE_CANVAS=1 -DM OZ_SVG=1 -DMOZ_SVG_FOREIGNOBJECT=1 -DMOZ_UPDATE_CHANNEL=default -DMOZ_PLACES=1 - DMOZ_FEEDS=1 -DMOZ_STORAGE=1 -DMOZ_SAFE_BROWSING=1 -DMOZ_URL_CLASSIFIER=1 -DMOZ_ LOGGING=1 -DHAVE___CXA_DEMANGLE=1 -DHAVE__UNWIND_BACKTRACE=1 -DMOZ_USER_DIR=\"Mo zilla\" -DHAVE_STDINT_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_UINT64_T=1 -DMOZ_XUL=1 -DMO Z_PROFILELOCKING=1 -DMOZ_RDF=1 -DMOZ_MORKREADER=1 -DMOZ_DLL_SUFFIX=\".dll\" -DJS _THREADSAFE=1 -DMOZILLA_LOCALE_VERSION=\"1.9a1\" -DMOZILLA_REGION_VERSION=\"1.9a 1\" -DMOZILLA_SKIN_VERSION=\"1.8\" -D_MOZILLA_CONFIG_H_ -DMOZILLA_CLIENT /cygdr ive/d/mozilla/mozilla/dom/src/json/nsJSON.cpp d:/mozilla/mozilla/dom/src/json/nsJSON.cpp: In member function `nsresult nsJSONL istener::HandleString(const PRUnichar*, PRUint32)': d:/mozilla/mozilla/dom/src/json/nsJSON.cpp:1276: error: invalid conversion from `const PRUnichar*' to `const jschar*' make[6]: *** [nsJSON.o] Error 1 make[6]: Leaving directory `/cygdrive/d/mozilla/mozilla/object-mingw/dom/src/jso n' make[5]: *** [libs] Error 2 make[5]: Leaving directory `/cygdrive/d/mozilla/mozilla/object-mingw/dom/src' make[4]: *** [libs] Error 2 make[4]: Leaving directory `/cygdrive/d/mozilla/mozilla/object-mingw/dom' make[3]: *** [libs_tier_gecko] Error 2 make[3]: Leaving directory `/cygdrive/d/mozilla/mozilla/object-mingw' make[2]: *** [tier_gecko] Error 2 make[2]: Leaving directory `/cygdrive/d/mozilla/mozilla/object-mingw' make[1]: *** [alldep] Error 2 make[1]: Leaving directory `/cygdrive/d/mozilla/mozilla/object-mingw' make: *** [alldep] Error 2
Updated•13 years ago
|
Component: General → DOM
Product: Firefox → Core
QA Contact: general → general
Assignee | ||
Comment 1•13 years ago
|
||
This patch fixes the build error for me.
Attachment #301912 -
Flags: review?
Updated•13 years ago
|
Attachment #301912 -
Flags: review? → review+
Comment 2•13 years ago
|
||
Comment on attachment 301912 [details] [diff] [review] patch wait, can't this be a static cast?
Attachment #301912 -
Flags: review+ → review?
Assignee | ||
Comment 3•13 years ago
|
||
If you mean whether I could replace reinterpret_cast with static_cast, mingw doesn't seem to accept that.
Updated•13 years ago
|
Attachment #301912 -
Flags: review? → review+
Updated•13 years ago
|
Assignee: nobody → martijn.martijn
Reporter | ||
Comment 4•13 years ago
|
||
I confirm that Martijn's patch is working well in Mingw and also in my VC8 build. ../mozilla/dom/src/json/nsJSON.cpp now compiles just fine without any warnings.
Assignee | ||
Updated•13 years ago
|
Attachment #301912 -
Flags: approval1.9?
Updated•13 years ago
|
Attachment #301912 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Comment 5•13 years ago
|
||
Checking in nsJSON.cpp; /cvsroot/mozilla/dom/src/json/nsJSON.cpp,v <-- nsJSON.cpp new revision: 1.5; previous revision: 1.4 done Checked in on trunk.
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Updated•2 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•