Bug 416101 - Mingw build error in ../mozilla/dom/src/json/nsJSON.cpp, r=sayer, a=mtschrep